<resources>
    <string name="app_name">Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome">Welcome !</string>
    <string name="login2">login</string>
    <string name="register2">register</string>
    <string name="or">OR</string>
    <string name="application">Application</string>
    <string name="title_activity_maps">Home</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    <string name="loginhere">Already have an account? <u>Login</u></string>
    <string name="signuphere">Create a new account? SignUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    


</resources>