<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textViewwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:layout_marginTop="80dp"
        android:textStyle="bold|italic"
        />

    <Button
        android:id="@+id/buttonlogin2"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/login2"
        android:layout_marginTop="40dp"
        />

        <TextView
            android:id="@+id/textor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginTop="25dp"
            />

    <Button
        android:id="@+id/buttonregister2"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/register2"
        android:layout_marginTop="25dp"
        />

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/undraw_off_road_9oae"/>
</LinearLayout>